[package]
name = "maiden"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
pest = "2.1"
pest_meta = "2.1"
pest_derive = "2.1"
failure = "0.1.3"
clap = { version = "2", optional = true }
regex = "1"
log = "0.4.4"
pretty_env_logger = "0.3"

[build-dependencies]
walkdir = "2"
failure = "0.1.3"

# Fixes for 
# * https://github.com/rust-lang/backtrace-rs/issues/24
# * https://github.com/rust-lang/backtrace-rs/issues/101
backtrace-sys = ">=0.1.21"

[dev-dependencies]
assert_cmd = "0.6"
pretty_assertions = "0.5"

[features]
default = ["cmd"]
cmd = ["clap"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = "0.6"
stdweb = "0.4.16"

[profile.release]
lto = true
opt-level = 's'