[package]
name = "maiden"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
pest = "2.1"
pest_meta = "2.1"
pest_derive = "2.1"
failure = "0.1.8"
clap = { version = "3.2.22", optional = true }
regex = "1"
log = "0.4.4"
pretty_env_logger = "0.4"

[build-dependencies]
walkdir = "2"
failure = "0.1.3"
serde_json = "1"
serde = "1.0.85"
serde_derive = "1.0.85"

# Fixes for 
# * https://github.com/rust-lang/backtrace-rs/issues/24
# * https://github.com/rust-lang/backtrace-rs/issues/101
backtrace-sys = ">=0.1.21"

[dev-dependencies]
assert_cmd = "0.6"
pretty_assertions = "1"

[features]
default = ["cmd"]
cmd = ["clap"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = "0.19"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = 's'